# SagaPay

./: .env.example  .gitignore  Dockerfile  FinPay_Explainer.docx  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/ledger/: alembic.ini  env.py
alembic/ledger/versions/: 0001_initial.py  0002_ledger_immutability.py  0003_outbox_hot_index.py
alembic/notification/: alembic.ini  env.py
alembic/notification/versions/: 0001_initial.py
alembic/orchestrator/: alembic.ini  env.py
alembic/orchestrator/versions/: 0001_initial.py  0002_state_version_timeline.py  0003_hot_path_indexes.py
alembic/provider_adapter/: alembic.ini  env.py
alembic/provider_adapter/versions/: 0001_initial.py  0002_outbox_hot_index.py
alembic/risk/: alembic.ini  env.py
alembic/risk/versions/: 0001_initial.py  0002_review_queue.py  0003_outbox_hot_index.py
finpay/: __init__.py
finpay/common/: __init__.py  config.py  db.py  events.py  logging.py  metrics.py  outbox.py  startup.py  state_machine.py  tracing.py
finpay/services/: __init__.py
finpay/services/api_gateway/: main.py
finpay/services/ledger/: __init__.py  main.py  models.py  service.py
finpay/services/notification/: main.py  (+2 more)
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
reports/: executive_report.html
scripts/: generate_executive_report.py  ledger_reconcile.py  load_test.py  migrate_all.ps1  migrate_all.sh  migrate_service.ps1  migrate_service.sh  publish_event.py  replay_dlq.py  risk_burst.py  start_service.sh
tests/: test_state_machine.py
(+14 files in other folders)
