[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagapay"
version = "0.1.0"
description = "SagaPay distributed payment orchestration and ledger system"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.8",
  "uvicorn[standard]==0.34.0",
  "sqlalchemy==2.0.38",
  "psycopg2-binary==2.9.10",
  "redis==5.2.1",
  "aiokafka==0.12.0",
  "httpx==0.28.1",
  "prometheus-client==0.21.1",
  "python-json-logger==3.2.1",
  "pydantic==2.10.6",
  "pydantic-settings==2.7.1",
  "opentelemetry-api==1.30.0",
  "opentelemetry-sdk==1.30.0",
  "opentelemetry-instrumentation-fastapi==0.51b0",
  "opentelemetry-exporter-otlp==1.30.0",
  "alembic==1.14.1"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools]
packages = ["finpay"]
